# SLAM-Optimization-Notes

./: README.md
day01/: CMakeLists.txt  eigen_sophus.cpp
day02/: CMakeLists.txt  camera_model.cpp
day03/: CMakeLists.txt  build.sh  orb_opencv.cpp
day04/: CMakeLists.txt  day04.cpp  pose_data.txt  readme.md  viz_pose.py
day05/: CMakeLists.txt  build.sh  day05_ceres_fitting.cpp
day06/: CMakeLists.txt  ba_data.txt  day06_pose_optimization.cpp  viz_ba.py
day07/: CMakeLists.txt  day07_icp.cpp
day08/: CMakeLists.txt  day08_optical_flow.cpp
day09/: CMakeLists.txt  build.sh  day09_direct_method.cpp
day10/: CMakeLists.txt  day10_g2o_curve_fitting.cpp
day11/: CMakeLists.txt  build.sh  day11_pose_graph.cpp  generate_circle.py  my_circle.g2o  plot_g2o.py
day12/: CMakeLists.txt  build.sh  day12_mapping.cpp  sphere_after.g2o
